--- a/homework/tu18_LinearRegression_II_HW.ipynb
+++ b/homework/tu18_LinearRegression_II_HW.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 79,
    "id": "459e8d43-c388-477b-97f6-c731e842ddca",
    "metadata": {
     "tags": []
@@ -34,6 +34,8 @@
     "import seaborn as sns\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.metrics import mean_absolute_error,mean_squared_error, r2_score\n",
     "\n",
     "from sklearn.datasets import fetch_california_housing\n",
     "california_housing = fetch_california_housing()"
@@ -41,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 44,
    "id": "3704961d-7e81-4c8d-985b-334daaf77f7c",
    "metadata": {
     "tags": []
@@ -76,6 +78,7 @@
        "      <th>AveOccup</th>\n",
        "      <th>Latitude</th>\n",
        "      <th>Longitude</th>\n",
+       "      <th>Median House Value</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -89,6 +92,7 @@
        "      <td>2.555556</td>\n",
        "      <td>37.88</td>\n",
        "      <td>-122.23</td>\n",
+       "      <td>4.526</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -100,6 +104,7 @@
        "      <td>2.109842</td>\n",
        "      <td>37.86</td>\n",
        "      <td>-122.22</td>\n",
+       "      <td>3.585</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -111,6 +116,7 @@
        "      <td>2.802260</td>\n",
        "      <td>37.85</td>\n",
        "      <td>-122.24</td>\n",
+       "      <td>3.521</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -122,6 +128,7 @@
        "      <td>2.547945</td>\n",
        "      <td>37.85</td>\n",
        "      <td>-122.25</td>\n",
+       "      <td>3.413</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -133,6 +140,7 @@
        "      <td>2.181467</td>\n",
        "      <td>37.85</td>\n",
        "      <td>-122.25</td>\n",
+       "      <td>3.422</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -146,46 +154,168 @@
        "3  5.6431      52.0  5.817352   1.073059       558.0  2.547945     37.85   \n",
        "4  3.8462      52.0  6.281853   1.081081       565.0  2.181467     37.85   \n",
        "\n",
-       "   Longitude  \n",
-       "0    -122.23  \n",
-       "1    -122.22  \n",
-       "2    -122.24  \n",
-       "3    -122.25  \n",
-       "4    -122.25  "
+       "   Longitude  Median House Value  \n",
+       "0    -122.23               4.526  \n",
+       "1    -122.22               3.585  \n",
+       "2    -122.24               3.521  \n",
+       "3    -122.25               3.413  \n",
+       "4    -122.25               3.422  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "california = pd.DataFrame(california_housing.data, columns=california_housing.feature_names)\n",
+    "# dataframe for features\n",
+    "california_features = pd.DataFrame(california_housing.data, columns=california_housing.feature_names)\n",
+    "california_features.head()\n",
+    "\n",
+    "# dataframe for target\n",
+    "california_target = pd.DataFrame(california_housing.target, columns=['Median House Value'])\n",
+    "\n",
+    "# combine the dataframes\n",
+    "california = pd.concat([california_features, california_target], axis=1)\n",
+    "\n",
     "california.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "d66c5b12-84e5-4b5a-8ed2-5ef4257b0520",
+   "execution_count": 94,
+   "id": "1853105e-2fa0-4265-acab-dad943d4a96a",
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'DataFrame' object has no attribute 'target'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/hw/f3853qmd06lfc_ptggtfcswh0000gn/T/ipykernel_17999/3871841906.py\u001b[0m in \u001b[0;36m?\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mcorrelation_matrix\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcalifornia\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcorr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mcorrelation_matrix\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtarget\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/anaconda3/lib/python3.11/site-packages/pandas/core/generic.py\u001b[0m in \u001b[0;36m?\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m   5985\u001b[0m             \u001b[0;32mand\u001b[0m \u001b[0mname\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_accessors\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   5986\u001b[0m             \u001b[0;32mand\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_info_axis\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_can_hold_identifiers_and_holds_name\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   5987\u001b[0m         ):\n\u001b[1;32m   5988\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 5989\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: 'DataFrame' object has no attribute 'target'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MedInc has the highest correlation with median housing value of 0.69.\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "# find the feature with highest correlation with median housing value\n",
+    "\n",
+    "corr = california.corr()['Median House Value'].sort_values(ascending = False)\n",
+    "\n",
+    "MedInc_corr = corr[1]\n",
+    "\n",
+    "print(f\"MedInc has the highest correlation with median housing value of {MedInc_corr:.2f}.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "c15dc45f-e072-4299-b925-890bb80d976d",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(20640, 1) (20640,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# predict\n",
+    "\n",
+    "# get dependent and independent variables from the data set\n",
+    "X = california[\"MedInc\"] #MedInc\n",
+    "y = california[\"Median House Value\"]\n",
+    "\n",
+    "X = X.values.reshape(-1, 1)\n",
+    "print(X.shape, y.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "id": "d80e8fa0-d504-4519-a12f-9a7b9a4beff5",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Training the linear regression model\n",
+    "model = LinearRegression()\n",
+    "model.fit(X, y)\n",
+    "\n",
+    "y_pred = model.predict(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "d9ae8ae5-95c6-47f8-bd07-ef046a209346",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([3.9302773 , 3.92033036, 3.48400258, ..., 1.1613512 , 1.23123052,\n",
+       "       1.44914365])"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_pred"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "dcc19e9f-3bf1-4309-afd6-91f8ab4217bb",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "y_data_array = np.array(y).reshape(-1, 1) \n",
+    "y_pred_array = np.array(y_pred).reshape(-1, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "id": "c1308e69-ce61-42bd-ae77-1caa7ece77a8",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Coefficient of Determination (R²) is 0.47344749180719903.\n"
+     ]
+    }
+   ],
+   "source": [
+    "r2 = r2_score(y_true = y_data_array, y_pred = y_pred_array)\n",
+    "\n",
+    "print(f\"The Coefficient of Determination (R²) is {r2}.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6526865d-4a02-480b-87ba-70d787b0632f",
+   "metadata": {},
+   "source": [
+    "The prediction of this model in terms of R2 should've been closer to 1 than the R2 for using all the features, but this produced a smaller R2. I'm not sure what I did wrong. "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -199,6 +329,145 @@
     "* Predict the Median House Value with all the features *except* the one with lowest correlation\n",
     "* How does the prediction of the this model (in terms of $R^2$) compare with the prediction of the full model model used in the exercise in class?"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "id": "a6c61cf9-1588-421a-b34a-b2fa2145e7f8",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Latitude             -0.144160\n",
+      "AveBedrms            -0.046701\n",
+      "Longitude            -0.045967\n",
+      "Population           -0.024650\n",
+      "AveOccup             -0.023737\n",
+      "HouseAge              0.105623\n",
+      "AveRooms              0.151948\n",
+      "MedInc                0.688075\n",
+      "Median House Value    1.000000\n",
+      "Name: Median House Value, dtype: float64\n",
+      "Latitude has the lowest correlation with median housing value of -0.14.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# find the feature with lowest correlation with median housing value\n",
+    "\n",
+    "corr_rev = california.corr()['Median House Value'].sort_values(ascending = True)\n",
+    "\n",
+    "latitude_corr = corr_rev[0]\n",
+    "\n",
+    "print(corr_rev)\n",
+    "print(f\"Latitude has the lowest correlation with median housing value of {latitude_corr:.2f}.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "id": "fe883fa6-2856-4958-813f-7a644996d6c6",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(165120, 1) (20640,)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0        4.526\n",
+       "1        3.585\n",
+       "2        3.521\n",
+       "3        3.413\n",
+       "4        3.422\n",
+       "         ...  \n",
+       "20635    0.781\n",
+       "20636    0.771\n",
+       "20637    0.923\n",
+       "20638    0.847\n",
+       "20639    0.894\n",
+       "Name: Median House Value, Length: 20640, dtype: float64"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X1 = california.drop(\"Latitude\", axis = 1)\n",
+    "y1 = california[\"Median House Value\"]\n",
+    "\n",
+    "X1 = X1.values.reshape(-1, 1)\n",
+    "print(X1.shape, y1.shape)\n",
+    "\n",
+    "y1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "id": "98d2a3f7-1d8e-4ef5-9f92-e6aa40ae1322",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predicted Median House Value using all features except Latitude: [4.526 3.585 3.521 ... 0.923 0.847 0.894]\n",
+      "The Coefficient of Determination (R²) is 0.47344749180719903.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "\n",
+    "# Assuming california is your DataFrame containing the California Housing dataset\n",
+    "# Drop the \"Latitude\" column from features and assign it to X\n",
+    "X1 = california.drop(\"Latitude\", axis=1)\n",
+    "\n",
+    "# Assign the target variable \"Median House Value\" to y\n",
+    "y1 = california[\"Median House Value\"]\n",
+    "\n",
+    "\n",
+    "# Create and fit the Linear Regression model\n",
+    "model = LinearRegression()\n",
+    "model.fit(X1, y1)\n",
+    "\n",
+    "# Predict Median House Value using all features except \"Latitude\"\n",
+    "y_pred1 = model.predict(X1)\n",
+    "\n",
+    "# Print the predictions\n",
+    "print(\"Predicted Median House Value using all features except Latitude:\", y_pred1)\n",
+    "\n",
+    "y_data_array1 = np.array(y1).reshape(-1, 1) \n",
+    "y_pred_array1 = np.array(y_pred1).reshape(-1, 1)\n",
+    "\n",
+    "r2_lat = r2_score(y_true = y_data_array, y_pred = y_pred_array)\n",
+    "\n",
+    "print(f\"The Coefficient of Determination (R²) is {r2_lat}.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fa0d18ff-62aa-42df-a161-357937815911",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
