--- a/homework/tu18_LinearRegression_II_HW.ipynb
+++ b/homework/tu18_LinearRegression_II_HW.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 3,
    "id": "459e8d43-c388-477b-97f6-c731e842ddca",
    "metadata": {
     "tags": []
@@ -43,148 +43,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "id": "3704961d-7e81-4c8d-985b-334daaf77f7c",
+   "execution_count": 28,
+   "id": "161092f0-a43b-424f-b175-f97640a0824c",
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>MedInc</th>\n",
-       "      <th>HouseAge</th>\n",
-       "      <th>AveRooms</th>\n",
-       "      <th>AveBedrms</th>\n",
-       "      <th>Population</th>\n",
-       "      <th>AveOccup</th>\n",
-       "      <th>Latitude</th>\n",
-       "      <th>Longitude</th>\n",
-       "      <th>Median House Value</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>8.3252</td>\n",
-       "      <td>41.0</td>\n",
-       "      <td>6.984127</td>\n",
-       "      <td>1.023810</td>\n",
-       "      <td>322.0</td>\n",
-       "      <td>2.555556</td>\n",
-       "      <td>37.88</td>\n",
-       "      <td>-122.23</td>\n",
-       "      <td>4.526</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>8.3014</td>\n",
-       "      <td>21.0</td>\n",
-       "      <td>6.238137</td>\n",
-       "      <td>0.971880</td>\n",
-       "      <td>2401.0</td>\n",
-       "      <td>2.109842</td>\n",
-       "      <td>37.86</td>\n",
-       "      <td>-122.22</td>\n",
-       "      <td>3.585</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>7.2574</td>\n",
-       "      <td>52.0</td>\n",
-       "      <td>8.288136</td>\n",
-       "      <td>1.073446</td>\n",
-       "      <td>496.0</td>\n",
-       "      <td>2.802260</td>\n",
-       "      <td>37.85</td>\n",
-       "      <td>-122.24</td>\n",
-       "      <td>3.521</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>5.6431</td>\n",
-       "      <td>52.0</td>\n",
-       "      <td>5.817352</td>\n",
-       "      <td>1.073059</td>\n",
-       "      <td>558.0</td>\n",
-       "      <td>2.547945</td>\n",
-       "      <td>37.85</td>\n",
-       "      <td>-122.25</td>\n",
-       "      <td>3.413</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>3.8462</td>\n",
-       "      <td>52.0</td>\n",
-       "      <td>6.281853</td>\n",
-       "      <td>1.081081</td>\n",
-       "      <td>565.0</td>\n",
-       "      <td>2.181467</td>\n",
-       "      <td>37.85</td>\n",
-       "      <td>-122.25</td>\n",
-       "      <td>3.422</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "   MedInc  HouseAge  AveRooms  AveBedrms  Population  AveOccup  Latitude  \\\n",
-       "0  8.3252      41.0  6.984127   1.023810       322.0  2.555556     37.88   \n",
-       "1  8.3014      21.0  6.238137   0.971880      2401.0  2.109842     37.86   \n",
-       "2  7.2574      52.0  8.288136   1.073446       496.0  2.802260     37.85   \n",
-       "3  5.6431      52.0  5.817352   1.073059       558.0  2.547945     37.85   \n",
-       "4  3.8462      52.0  6.281853   1.081081       565.0  2.181467     37.85   \n",
-       "\n",
-       "   Longitude  Median House Value  \n",
-       "0    -122.23               4.526  \n",
-       "1    -122.22               3.585  \n",
-       "2    -122.24               3.521  \n",
-       "3    -122.25               3.413  \n",
-       "4    -122.25               3.422  "
+       "MedInc                0.688075\n",
+       "HouseAge              0.105623\n",
+       "AveRooms              0.151948\n",
+       "AveBedrms            -0.046701\n",
+       "Population           -0.024650\n",
+       "AveOccup             -0.023737\n",
+       "Latitude             -0.144160\n",
+       "Longitude            -0.045967\n",
+       "Median House Value    1.000000\n",
+       "Name: Median House Value, dtype: float64"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# dataframe for features\n",
-    "california_features = pd.DataFrame(california_housing.data, columns=california_housing.feature_names)\n",
-    "california_features.head()\n",
+    "california = pd.DataFrame(california_housing.data, columns=california_housing.feature_names)\n",
+    "california['Median House Value'] = california_housing.target\n",
     "\n",
-    "# dataframe for target\n",
-    "california_target = pd.DataFrame(california_housing.target, columns=['Median House Value'])\n",
-    "\n",
-    "# combine the dataframes\n",
-    "california = pd.concat([california_features, california_target], axis=1)\n",
-    "\n",
-    "california.head()"
+    "corr = california.corr()['Median House Value']\n",
+    "corr"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
-   "id": "1853105e-2fa0-4265-acab-dad943d4a96a",
+   "execution_count": 27,
+   "id": "81153eb1-1fe0-41ce-b121-3715c34c2b53",
    "metadata": {
     "tags": []
    },
@@ -198,18 +94,14 @@
     }
    ],
    "source": [
-    "# find the feature with highest correlation with median housing value\n",
-    "\n",
-    "corr = california.corr()['Median House Value'].sort_values(ascending = False)\n",
-    "\n",
-    "MedInc_corr = corr[1]\n",
+    "MedInc_corr = corr[0]\n",
     "\n",
     "print(f\"MedInc has the highest correlation with median housing value of {MedInc_corr:.2f}.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 16,
    "id": "c15dc45f-e072-4299-b925-890bb80d976d",
    "metadata": {
     "tags": []
@@ -236,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 17,
    "id": "d80e8fa0-d504-4519-a12f-9a7b9a4beff5",
    "metadata": {
     "tags": []
@@ -252,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 18,
    "id": "d9ae8ae5-95c6-47f8-bd07-ef046a209346",
    "metadata": {
     "tags": []
@@ -265,7 +157,7 @@
        "       1.44914365])"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 19,
    "id": "dcc19e9f-3bf1-4309-afd6-91f8ab4217bb",
    "metadata": {
     "tags": []
@@ -289,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 20,
    "id": "c1308e69-ce61-42bd-ae77-1caa7ece77a8",
    "metadata": {
     "tags": []
@@ -332,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 33,
    "id": "a6c61cf9-1588-421a-b34a-b2fa2145e7f8",
    "metadata": {
     "tags": []
@@ -342,34 +234,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Latitude             -0.144160\n",
-      "AveBedrms            -0.046701\n",
-      "Longitude            -0.045967\n",
-      "Population           -0.024650\n",
-      "AveOccup             -0.023737\n",
-      "HouseAge              0.105623\n",
-      "AveRooms              0.151948\n",
-      "MedInc                0.688075\n",
-      "Median House Value    1.000000\n",
-      "Name: Median House Value, dtype: float64\n",
-      "Latitude has the lowest correlation with median housing value of -0.14.\n"
+      "Latitude has the lowest correlation with median housing value of -0.05.\n"
      ]
     }
    ],
    "source": [
     "# find the feature with lowest correlation with median housing value\n",
+    "latitude_corr = corr.iloc[-2]\n",
     "\n",
-    "corr_rev = california.corr()['Median House Value'].sort_values(ascending = True)\n",
-    "\n",
-    "latitude_corr = corr_rev[0]\n",
-    "\n",
-    "print(corr_rev)\n",
     "print(f\"Latitude has the lowest correlation with median housing value of {latitude_corr:.2f}.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 43,
    "id": "fe883fa6-2856-4958-813f-7a644996d6c6",
    "metadata": {
     "tags": []
@@ -381,68 +259,42 @@
      "text": [
       "(165120, 1) (20640,)\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0        4.526\n",
-       "1        3.585\n",
-       "2        3.521\n",
-       "3        3.413\n",
-       "4        3.422\n",
-       "         ...  \n",
-       "20635    0.781\n",
-       "20636    0.771\n",
-       "20637    0.923\n",
-       "20638    0.847\n",
-       "20639    0.894\n",
-       "Name: Median House Value, Length: 20640, dtype: float64"
-      ]
-     },
-     "execution_count": 103,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "X1 = california.drop(\"Latitude\", axis = 1)\n",
-    "y1 = california[\"Median House Value\"]\n",
+    "y1 = california.drop(\"Latitude\", axis = 1)[\"Median House Value\"]\n",
     "\n",
     "X1 = X1.values.reshape(-1, 1)\n",
-    "print(X1.shape, y1.shape)\n",
-    "\n",
-    "y1"
+    "print(X1.shape, y1.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 44,
    "id": "98d2a3f7-1d8e-4ef5-9f92-e6aa40ae1322",
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Predicted Median House Value using all features except Latitude: [4.526 3.585 3.521 ... 0.923 0.847 0.894]\n",
-      "The Coefficient of Determination (R²) is 0.47344749180719903.\n"
+     "ename": "ValueError",
+     "evalue": "Found input variables with inconsistent numbers of samples: [165120, 20640]",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[44], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Create and fit the Linear Regression model\u001b[39;00m\n\u001b[1;32m      2\u001b[0m model \u001b[38;5;241m=\u001b[39m LinearRegression()\n\u001b[0;32m----> 3\u001b[0m model\u001b[38;5;241m.\u001b[39mfit(X1, y1)\n\u001b[1;32m      5\u001b[0m \u001b[38;5;66;03m# Predict Median House Value using all features except \"Latitude\"\u001b[39;00m\n\u001b[1;32m      6\u001b[0m y_pred1 \u001b[38;5;241m=\u001b[39m model\u001b[38;5;241m.\u001b[39mpredict(X1)\n",
+      "File \u001b[0;32m~/anaconda3/lib/python3.11/site-packages/sklearn/base.py:1151\u001b[0m, in \u001b[0;36m_fit_context.<locals>.decorator.<locals>.wrapper\u001b[0;34m(estimator, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1144\u001b[0m     estimator\u001b[38;5;241m.\u001b[39m_validate_params()\n\u001b[1;32m   1146\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m config_context(\n\u001b[1;32m   1147\u001b[0m     skip_parameter_validation\u001b[38;5;241m=\u001b[39m(\n\u001b[1;32m   1148\u001b[0m         prefer_skip_nested_validation \u001b[38;5;129;01mor\u001b[39;00m global_skip_validation\n\u001b[1;32m   1149\u001b[0m     )\n\u001b[1;32m   1150\u001b[0m ):\n\u001b[0;32m-> 1151\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m fit_method(estimator, \u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n",
+      "File \u001b[0;32m~/anaconda3/lib/python3.11/site-packages/sklearn/linear_model/_base.py:678\u001b[0m, in \u001b[0;36mLinearRegression.fit\u001b[0;34m(self, X, y, sample_weight)\u001b[0m\n\u001b[1;32m    674\u001b[0m n_jobs_ \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mn_jobs\n\u001b[1;32m    676\u001b[0m accept_sparse \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mpositive \u001b[38;5;28;01melse\u001b[39;00m [\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcsr\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcsc\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcoo\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[0;32m--> 678\u001b[0m X, y \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_validate_data(\n\u001b[1;32m    679\u001b[0m     X, y, accept_sparse\u001b[38;5;241m=\u001b[39maccept_sparse, y_numeric\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m, multi_output\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[1;32m    680\u001b[0m )\n\u001b[1;32m    682\u001b[0m has_sw \u001b[38;5;241m=\u001b[39m sample_weight \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m    683\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m has_sw:\n",
+      "File \u001b[0;32m~/anaconda3/lib/python3.11/site-packages/sklearn/base.py:621\u001b[0m, in \u001b[0;36mBaseEstimator._validate_data\u001b[0;34m(self, X, y, reset, validate_separately, cast_to_ndarray, **check_params)\u001b[0m\n\u001b[1;32m    619\u001b[0m         y \u001b[38;5;241m=\u001b[39m check_array(y, input_name\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124my\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mcheck_y_params)\n\u001b[1;32m    620\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m--> 621\u001b[0m         X, y \u001b[38;5;241m=\u001b[39m check_X_y(X, y, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mcheck_params)\n\u001b[1;32m    622\u001b[0m     out \u001b[38;5;241m=\u001b[39m X, y\n\u001b[1;32m    624\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m no_val_X \u001b[38;5;129;01mand\u001b[39;00m check_params\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mensure_2d\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28;01mTrue\u001b[39;00m):\n",
+      "File \u001b[0;32m~/anaconda3/lib/python3.11/site-packages/sklearn/utils/validation.py:1165\u001b[0m, in \u001b[0;36mcheck_X_y\u001b[0;34m(X, y, accept_sparse, accept_large_sparse, dtype, order, copy, force_all_finite, ensure_2d, allow_nd, multi_output, ensure_min_samples, ensure_min_features, y_numeric, estimator)\u001b[0m\n\u001b[1;32m   1147\u001b[0m X \u001b[38;5;241m=\u001b[39m check_array(\n\u001b[1;32m   1148\u001b[0m     X,\n\u001b[1;32m   1149\u001b[0m     accept_sparse\u001b[38;5;241m=\u001b[39maccept_sparse,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m   1160\u001b[0m     input_name\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mX\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m   1161\u001b[0m )\n\u001b[1;32m   1163\u001b[0m y \u001b[38;5;241m=\u001b[39m _check_y(y, multi_output\u001b[38;5;241m=\u001b[39mmulti_output, y_numeric\u001b[38;5;241m=\u001b[39my_numeric, estimator\u001b[38;5;241m=\u001b[39mestimator)\n\u001b[0;32m-> 1165\u001b[0m check_consistent_length(X, y)\n\u001b[1;32m   1167\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m X, y\n",
+      "File \u001b[0;32m~/anaconda3/lib/python3.11/site-packages/sklearn/utils/validation.py:409\u001b[0m, in \u001b[0;36mcheck_consistent_length\u001b[0;34m(*arrays)\u001b[0m\n\u001b[1;32m    407\u001b[0m uniques \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39munique(lengths)\n\u001b[1;32m    408\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(uniques) \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[0;32m--> 409\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[1;32m    410\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFound input variables with inconsistent numbers of samples: \u001b[39m\u001b[38;5;132;01m%r\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    411\u001b[0m         \u001b[38;5;241m%\u001b[39m [\u001b[38;5;28mint\u001b[39m(l) \u001b[38;5;28;01mfor\u001b[39;00m l \u001b[38;5;129;01min\u001b[39;00m lengths]\n\u001b[1;32m    412\u001b[0m     )\n",
+      "\u001b[0;31mValueError\u001b[0m: Found input variables with inconsistent numbers of samples: [165120, 20640]"
      ]
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "from sklearn.linear_model import LinearRegression\n",
-    "\n",
-    "# Assuming california is your DataFrame containing the California Housing dataset\n",
-    "# Drop the \"Latitude\" column from features and assign it to X\n",
-    "X1 = california.drop(\"Latitude\", axis=1)\n",
-    "\n",
-    "# Assign the target variable \"Median House Value\" to y\n",
-    "y1 = california[\"Median House Value\"]\n",
-    "\n",
-    "\n",
     "# Create and fit the Linear Regression model\n",
     "model = LinearRegression()\n",
     "model.fit(X1, y1)\n",
