--- a/homework/tu18_LinearRegression_II_HW.ipynb
+++ b/homework/tu18_LinearRegression_II_HW.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "459e8d43-c388-477b-97f6-c731e842ddca",
    "metadata": {
     "tags": []
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "id": "161092f0-a43b-424f-b175-f97640a0824c",
    "metadata": {
     "tags": []
@@ -64,7 +64,7 @@
        "Name: Median House Value, dtype: float64"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "id": "81153eb1-1fe0-41ce-b121-3715c34c2b53",
    "metadata": {
     "tags": []
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 29,
    "id": "c15dc45f-e072-4299-b925-890bb80d976d",
    "metadata": {
     "tags": []
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "id": "d80e8fa0-d504-4519-a12f-9a7b9a4beff5",
    "metadata": {
     "tags": []
@@ -144,31 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "d9ae8ae5-95c6-47f8-bd07-ef046a209346",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([3.9302773 , 3.92033036, 3.48400258, ..., 1.1613512 , 1.23123052,\n",
-       "       1.44914365])"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y_pred"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "id": "dcc19e9f-3bf1-4309-afd6-91f8ab4217bb",
    "metadata": {
     "tags": []
@@ -181,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 26,
    "id": "c1308e69-ce61-42bd-ae77-1caa7ece77a8",
    "metadata": {
     "tags": []
@@ -191,14 +167,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The Coefficient of Determination (R²) is 0.47344749180719903.\n"
+      "The Coefficient of Determination (R²) is 0.47.\n"
      ]
     }
    ],
    "source": [
     "r2 = r2_score(y_true = y_data_array, y_pred = y_pred_array)\n",
     "\n",
-    "print(f\"The Coefficient of Determination (R²) is {r2}.\")"
+    "print(f\"The Coefficient of Determination (R²) is {r2:.2f}.\")"
    ]
   },
   {
@@ -247,26 +223,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 35,
    "id": "fe883fa6-2856-4958-813f-7a644996d6c6",
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(165120, 1) (20640,)\n"
-     ]
+     "data": {
+      "text/plain": [
+       "(20640,)"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "X1 = california.drop(\"Latitude\", axis = 1)\n",
-    "y1 = california.drop(\"Latitude\", axis = 1)[\"Median House Value\"]\n",
+    "y1 = X1[\"Median House Value\"]\n",
     "\n",
     "X1 = X1.values.reshape(-1, 1)\n",
-    "print(X1.shape, y1.shape)"
+    "y1.shape"
    ]
   },
   {
